# cloudconduit

./: .gitignore  DEPLOYMENT.md  LICENSE  MANIFEST.in  README.md  VSCODE_SETUP.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml  test.yml
cloudconduit/: __init__.py  config.yaml
cloudconduit/connectors/: __init__.py  base.py  databricks.py  s3.py  snowflake.py
cloudconduit/utils/: config_helper.py  config_manager.py  credential_manager.py  quick_config.py  system_info.py  unified_api.py
docs/: Makefile
docs/source/: conf.py  configuration.md  index.rst  quickstart.md
scripts/: build_docs.sh  run_tests.sh  setup_dev.sh
tests/: __init__.py  conftest.py
tests/integration/: test_integration.py
tests/unit/: test_config_manager.py  test_credential_manager.py  test_databricks_connector.py  test_s3_connector.py  test_snowflake_connector.py  test_system_info.py  test_unified_api.py
